<?xml version="1.0"?>
<package format="3">
  <name>entri_ros2_basics_cpp</name>
  <version>0.0.0</version>
  <description>Assignment: Basic Hello World Node</description>
  <maintainer email="tomas.cyriac@gmail.com">Student Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- missing dependency -->
  <depend>rclcpp</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
